[gd_scene load_steps=14 format=3 uid="uid://dtxo21f7rot68"]

[ext_resource type="Texture2D" uid="uid://confi8rvtyhxb" path="res://assets/structure/campfire/Bonfire_02-Sheet.png" id="1_gvduw"]
[ext_resource type="Texture2D" uid="uid://dhkcl0sxr44rp" path="res://assets/structure/campfire/Fire_01-Sheet.png" id="1_laf35"]
[ext_resource type="Script" uid="uid://b4opebxxywrxj" path="res://scripts/camp_fire.gd" id="1_ttny0"]
[ext_resource type="Texture2D" uid="uid://t24ikasq2qt4" path="res://assets/light/light.webp" id="4_5a6tu"]
[ext_resource type="Texture2D" uid="uid://by08bwhcnkiju" path="res://assets/actions/button_action.png" id="4_54jok"]
[ext_resource type="AudioStream" uid="uid://dqsjubhkkpkco" path="res://assets/soundtrack/fire.mp3" id="6_xkesr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ttny0"]
radius = 24.6757

[sub_resource type="Animation" id="Animation_laf35"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_gvduw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SafeArea/PointLight2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5a6tu"]
resource_name = "active"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_gvduw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SafeArea/PointLight2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_54jok"]
resource_name = "desative"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_gvduw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SafeArea/PointLight2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_54jok"]
_data = {
&"RESET": SubResource("Animation_laf35"),
&"active": SubResource("Animation_5a6tu"),
&"desative": SubResource("Animation_54jok")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5a6tu"]
radius = 41.4193

[sub_resource type="CircleShape2D" id="CircleShape2D_laf35"]
radius = 107.143

[node name="CampFire" type="StaticBody2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_ttny0")

[node name="FireSprite" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, -8)
texture = ExtResource("1_laf35")
hframes = 4

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_gvduw")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ttny0")
debug_color = Color(0.978527, 0, 0.395467, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_54jok")
}
autoplay = "active"

[node name="Control" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
visible = false
position = Vector2(0, -35)
texture = ExtResource("4_54jok")

[node name="ReloadFuel" type="Area2D" parent="."]

[node name="AreaSetFuel" type="CollisionShape2D" parent="ReloadFuel"]
shape = SubResource("CircleShape2D_5a6tu")
debug_color = Color(0.734949, 0.470054, 3.85046e-07, 0.42)

[node name="SafeArea" type="Area2D" parent="."]

[node name="AreaToSafe" type="CollisionShape2D" parent="SafeArea"]
shape = SubResource("CircleShape2D_laf35")

[node name="PointLight2D" type="PointLight2D" parent="SafeArea"]
color = Color(0.971392, 0.817918, 0.712688, 1)
texture = ExtResource("4_5a6tu")
height = 5.0

[node name="TimerDmg" type="Timer" parent="."]
autostart = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xkesr")
autoplay = true
max_distance = 150.0
parameters/looping = true

[connection signal="body_entered" from="ReloadFuel" to="." method="_on_reload_fuel_body_entered"]
[connection signal="body_exited" from="ReloadFuel" to="." method="_on_reload_fuel_body_exited"]
[connection signal="body_entered" from="SafeArea" to="." method="_on_safe_area_body_entered"]
[connection signal="body_exited" from="SafeArea" to="." method="_on_safe_area_body_exited"]
[connection signal="timeout" from="TimerDmg" to="." method="_on_timer_dmg_timeout"]
